# aitabbble

./: BACKEND_TASKS.md  FRONTEND_TASKS.md  README.md  TIMELOG.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
backend/app/aitabbble/: __init__.py  application.py  config.py  db.py  models.py  openai_client.py  schema.py  tools.py
backend/app/aitabbble/chat/: service.py
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/assistant/: page.tsx
frontend/src/components/: AiSidebar.tsx  AssistantProvider.tsx  Cell.tsx  ConfirmDeletionDialog.tsx  EditableColumnHeader.tsx  SpreadsheetArea.tsx  SpreadsheetTable.tsx
frontend/src/components/assistant-ui/: thread-list.tsx  thread.tsx
frontend/src/components/assistant-ui/tools/: tool-random.tsx  tool-web.tsx
frontend/src/components/ui/: spinner.tsx
frontend/src/lib/: api.ts
frontend/src/types/: chat.ts  spreadsheet.ts
frontend/src/utils/: spreadsheet.ts
