[project]
name = "backend"
version = "0.1.0"
description = "AI-assisted spreadsheet"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "openai>=1.85.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "sentry-sdk[fastapi]>=2.29.1",
    "tenacity>=9.1.2",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]

